--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,116 +1,74 @@
-.container {
-  padding: 0 2rem;
-}
+$primary-color: #7F57D8;
+$darker-primary-color: #633BBC;
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  background: linear-gradient(to bottom, rgb(24, 7, 40), rgb(4, 1, 7));
+  width: 100vw;
+  height: 100vh;
 }
 
-.footer {
+.imageWrapper {
+  position: relative;
+  z-index: 1;
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
+  &_logo {
+    margin-top: 4rem;
+  }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+  &_fundo {
+    position: absolute;
+    z-index: -1;
+    top: 0vh;
     width: 100%;
-    flex-direction: column;
+    mask-image: linear-gradient(to top, transparent 5%, black);
+    -webkit-mask-image: linear-gradient(to top, transparent 5%, black 100%);
+  }
+
+  &_title {
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 500;
+    font-family: Orbitron;
+    text-align: center;
+    margin: .5rem;
+  }
+}
+
+.button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 8vh;
+  margin: 2rem 1rem;
+  background-color: $primary-color;
+  border: none;
+  border-radius: 8px;
+  filter: brightness(1);
+  transition: filter .2s ease-in-out;
+
+  &:active {
+    filter:brightness(1.2);
+  }
+
+  &_title {
+    color: white;
+    font-size: 1.3rem;
+    margin: 0;
+  }
+
+  &_icon {
+    color: white;
+    background: $darker-primary-color;
+    font-size: 1.5rem;
+    width: 10vw;
+    border-radius: 6px;
   }
 }
